--- a/9.1/9.1.md
+++ b/9.1/9.1.md
@@ -1,2 +1,32 @@
 ###9	TABELAS E PRINCIPAIS CONSULTAS<br>
 ####9.1	CONSULTAS DAS TABELAS COM TODOS OS DADOS INSERIDOS<br>
+
+				select * from PESSOA;
+
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.1/1.png  "Resultado")<br>
+---------------------------------------------------------------------------------------------
+
+				select * from ALUNO;
+
+![Alt text](FALTA)<br>
+---------------------------------------------------------------------------------------------
+
+				select * from ARQUIVO;
+
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.1/2.png  "Resultado")<br>
+---------------------------------------------------------------------------------------------
+
+				select * from ATIVIDADE;
+
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.1/3.png  "Resultado")<br>
+---------------------------------------------------------------------------------------------
+
+				select * from ADICIONA;
+
+![Alt text](FALTA)<br>
+---------------------------------------------------------------------------------------------
+
+				select * from CATEGORIA;
+
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.1/5.png  "Resultado")<br>
+---------------------------------------------------------------------------------------------
