--- a/9.1/9.1.md
+++ b/9.1/9.1.md
@@ -8,7 +8,7 @@
 
 				select * from ALUNO;
 
-![Alt text](FALTA)<br>
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/aluno.png "Resultado")<br>
 ---------------------------------------------------------------------------------------------
 
 				select * from ARQUIVO;
@@ -23,7 +23,7 @@
 
 				select * from ADICIONA;
 
-![Alt text](FALTA)<br>
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/adiciona.png "Resultado")<br>
 ---------------------------------------------------------------------------------------------
 
 				select * from CATEGORIA;
