--- a/9.5/9.5.md
+++ b/9.5/9.5.md
@@ -3,15 +3,29 @@
 
 				update PESSOA set nome = 'Michelle' where codpessoa = 9;
         
-![Alt text](FALTA)<br>
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.5/Michelle.png "Resultado")<br>
 ---------------------------------------------------------------------------------------------
 
 				update PESSOA set nome = 'Lucas' where codPessoa = 4;
 
-![Alt text](FALTA)<br>
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.5/Michelle.png "Resultado")<br>
 ---------------------------------------------------------------------------------------------
 
 				delete from PESSOA where codPessoa = 1;
 
 ![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.5/z.png "Resultado")<br>
+---------------------------------------------------------------------------------------------
+			update PESSOA set telefone = '3229-5745' where nome = 'Michelle';
+			
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.5/Michelle tel.png "Resultado")<br>
+---------------------------------------------------------------------------------------------
+
+			update PESSOA set email = 'michellegatinhasex@semfrescura.com' where nome = 'Michelle';
+			
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.5/michelle mail.png "Resultado")<br>
+---------------------------------------------------------------------------------------------
+
+			update PESSOA set email = 'michellegatinhasex@semfrescura.com' where nome = 'Michelle';
+			
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.5/michelle mail.png "Resultado")<br>
 ---------------------------------------------------------------------------------------------
