--- a/9.7/9.7.md
+++ b/9.7/9.7.md
@@ -15,3 +15,12 @@
 
 ![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.7/q.png "Resultado")<br>
 ---------------------------------------------------------------------------------------------
+				select nome, codPessoa, email from PESSOA where nome not like '%a%' group by pessoa.senha, pessoa.codpessoa;
+        
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.7/email.png "Resultado")<br>
+---------------------------------------------------------------------------------------------
+
+		select nome, codPessoa, email, telefone from PESSOA where nome not like '%a%' group by pessoa.senha, pessoa.codpessoa;
+        
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.7/telefone.png "Resultado")<br>
+---------------------------------------------------------------------------------------------
