--- a/9.8/9.8.md
+++ b/9.8/9.8.md
@@ -10,3 +10,15 @@
 
 ![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.8/s.png "Resultado")<br>
 ---------------------------------------------------------------------------------------------
+
+
+				select PESSOA.nome, PESSOA.email, ALUNO.codPessoa from PESSOA right join ALUNO on (PESSOA.codPessoa = ALUNO.codPessoa) where PESSOA.codPessoa = 5; 
+
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.8/3.png "Resultado")<br>
+---------------------------------------------------------------------------------------------
+
+
+				select PESSOA.nome, PESSOA.email, ALUNO.codPessoa from PESSOA right join ALUNO on (PESSOA.codPessoa = ALUNO.codPessoa) where PESSOA.codPessoa != 5 and PESSOA.codPessoa != 3;  
+
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.8/4.png "Resultado")<br>
+---------------------------------------------------------------------------------------------
