--- a/9.9/9.9.md
+++ b/9.9/9.9.md
@@ -2,12 +2,8 @@
 ####9.9	CONSULTAS COM SELF JOIN E VIEW<br>
 
 				
-        FALTA QUERRY
+        create view vwALUNO as select matricula as codigo, codpessoa as id from ALUNO;
         
-![Alt text](FALTA)<br>
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.9/view2.png  "Resultado")<br>
 ---------------------------------------------------------------------------------------------
 
-				create view vwALUNO as select nome as identificacao, mastricula as codigo from ALUNOS;
-
-![Alt text](FALTA)<br>
----------------------------------------------------------------------------------------------
