--- a/9.10.MD
+++ b/9.10.MD
@@ -1,4 +1,4 @@
 ###9	TABELAS E PRINCIPAIS CONSULTAS<br>
 ####9.10	SUBCONSULTAS<br>
     Não foi feito nenhum código ou captura de tela do 9.10 visto que não foi encontrado
-    uma aplicação necessária.
+    uma aplicação necessária, devido a baixa quantidade de dados possuidos.
