--- a/9.8/9.8.md
+++ b/9.8/9.8.md
@@ -1,5 +1,5 @@
 ###9	TABELAS E PRINCIPAIS CONSULTAS<br>
-####9.8	CONSULTAS COM GROUP BY<br>
+####9.8	CONSULTAS COM LEFT E RIGHT JOIN<br>
 
 				select PESSOA.nome, ALUNO.codPessoa from PESSOA left join ALUNO on (PESSOA.codPessoa = ALUNO.codPessoa) where PESSOA.codPessoa > 3; 
         
