--- a/9.10.MD
+++ b/9.10.MD
@@ -1,4 +1,22 @@
 ###9	TABELAS E PRINCIPAIS CONSULTAS<br>
 ####9.10	SUBCONSULTAS<br>
-    Não foi feito nenhum código ou captura de tela do 9.10 visto que não foi encontrado
-    uma aplicação necessária, devido a baixa quantidade de dados possuidos.
+
+       
+            Select * from aluno where matricula in ( select matricula from aluno where matricula like '2014%') ;
+        
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/sub1.png  "Resultado")<br>
+---------------------------------------------------------------------------------------------
+
+
+   
+            Select * from atividade where unidavali in (select unidavali from atividade where unidavali<>'Semestre' );
+        
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/sub2.png  "Resultado")<br>
+---------------------------------------------------------------------------------------------
+
+
+   
+            Select * from aluno where dtconclusao in (select dtconclusao from aluno where dtconclusao<>'2017-01-01' ); 
+        
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/sub3.png  "Resultado")<br>
+---------------------------------------------------------------------------------------------
