--- a/9.9/9.9.md
+++ b/9.9/9.9.md
@@ -7,3 +7,8 @@
 ![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.9/view2.png  "Resultado")<br>
 ---------------------------------------------------------------------------------------------
 
+				
+        SELECT  aluno.matricula, pessoa.nome FROM aluno aluno, pessoa pessoa  WHERE aluno.codpessoa > 8;
+        
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.9/self.png  "Resultado")<br>
+---------------------------------------------------------------------------------------------
