--- a/9.1/9.1.md
+++ b/9.1/9.1.md
@@ -30,3 +30,8 @@
 
 ![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.1/5.png  "Resultado")<br>
 ---------------------------------------------------------------------------------------------
+			select * from twitter;
+
+![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.1/twitter.png  "Resultado")<br>
+---------------------------------------------------------------------------------------------
+
