--- a/9.1/9.1.md
+++ b/9.1/9.1.md
@@ -30,6 +30,8 @@
 
 ![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.1/5.png  "Resultado")<br>
 ---------------------------------------------------------------------------------------------
+Este é o print ta tabela dos dados minerados do Twitter já que foi feito pelo pentaho não consegui o script de inserção de todos os dados sendo retirados do arquivo csv e jogando no banco, mas tem o arquivo ktr. gerado na operação <br>
+
 			select * from twitter;
 
 ![Alt text](https://github.com/calosguilherme/trab01/blob/master/9.1/twitter.png  "Resultado")<br>
